--- a/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,10 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+.form-control.invalid input{
+  border-color: red;
+  background-color:rgb(222, 165, 165) ;
+}
+.form-control.invalid label{
+  color: red;
+}
